<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.views.DetailsFragment">

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/details_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tableLayout,divider2,school_name,btn_close" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_close"
        style="@style/Widget.AppCompat.ActionButton.CloseMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/school_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/school_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_close" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/school_name" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:padding="16dp"
        android:stretchColumns="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2">

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/dbn_text" />

            <TextView
                android:id="@+id/dbn"
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/dbn" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/num_of_sat_test_takers_test" />

            <TextView
                android:id="@+id/num_of_sat_test_takers"
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/num_of_sat_test_takers" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/sat_critical_reading_avg_score_text" />

            <TextView
                android:id="@+id/sat_critical_reading_avg_score"
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/num_of_sat_test_takers" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/sat_math_avg_score_text" />

            <TextView
                android:id="@+id/sat_math_avg_score"
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/num_of_sat_test_takers" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/sat_writing_avg_score_test" />

            <TextView
                android:id="@+id/sat_writing_avg_score"
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/num_of_sat_test_takers" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>